# demo-cursor-py

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: functions.mdc
app/: main.py  schemas.py  settings.py
